@@ -1,4 +1,7 @@
 Date
+2006/12/03
+	* Reviewed img.php and middle.php files with help of gunawan wibisono [BeoWulf]
+
 2006/10/23
 	* Added a variable in recover.php [BeoWulf]
 
